--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
     background-color: #FEFCFE;
 }
 header {
-    padding-top: 49px;
-    max-width: 1817px;
+    padding-top: 51px;
+    max-width: 1817.4px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -65,4 +65,72 @@ header ul {
 .img-social:hover {
     transform: scale(1.4);
     opacity: 1;
+}
+.wrapper {
+    width: 1143px;
+    margin: 0 auto;
+}
+.home {
+    position: absolute;
+    width: 676px;
+    margin-top: 252px;
+}
+.home-h1 {
+    font-size: 48px;
+    font-weight: 700;
+    color: #2B3541;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    line-height: 125%;
+}
+.home-title {
+    display: flex;
+    padding-top: 10px;
+}
+.home-title-number {
+    font-size: 40px;
+    line-height: 125%;
+    color: #2B3541;
+    margin-right: 21px;
+}
+.home-title-description {
+    width: 297px;
+}
+.home-title-description-1 {
+    font-size: 40px;
+    line-height: 125%;
+    color: #2B3541;
+}
+.home-title-description-2 {
+    font-size: 18px;
+    line-height: 150%;
+    color: #2B3541;
+    margin-top: 21px;
+}
+.btn-more {
+    margin-top: 35px;
+    display: block;
+    width: 252px;
+    height: 64px;
+    background: #FBF138;
+    color: #2B3541;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    line-height: 63px;
+    box-shadow: 0px 13px 24px rgba(251, 241, 56, 0.3);
+    margin-bottom: 183px;
+}
+.btn-more:hover {
+    background: #2B3541;
+    color: #FBF138
+}
+.photo-woman {
+    position: absolute;
+    top: -229px;
+    left: 331px;
 }
