--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
     font-style: normal;
 }
 body {
+    width: 1920px;
+    margin: 0 auto;
     font-family: "Montserrat";
     font-size: 18px;
     font-weight: 400;
@@ -23,10 +25,20 @@ header {
     display: flex;
     justify-content: space-between;
 }
-header ul {
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+h2 {
+    margin: 0;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 125%;
+    color: #2B3541;
+}
+footer {
+    background: #F3F3F3;
 }
 .header-menu {
     width: 805px;
@@ -71,9 +83,9 @@ header ul {
     margin: 0 auto;
 }
 .home {
-    position: absolute;
+    position: relative;
     width: 676px;
-    margin-top: 252px;
+    margin-top: 253px;
 }
 .home-h1 {
     font-size: 48px;
@@ -85,7 +97,7 @@ header ul {
 }
 .home-title {
     display: flex;
-    padding-top: 10px;
+    padding-top: 9px;
 }
 .home-title-number {
     font-size: 40px;
@@ -121,7 +133,7 @@ header ul {
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    line-height: 63px;
+    line-height: 68px;
     box-shadow: 0px 13px 24px rgba(251, 241, 56, 0.3);
     margin-bottom: 183px;
 }
@@ -133,4 +145,340 @@ header ul {
     position: absolute;
     top: -229px;
     left: 331px;
+    z-index: -1;
+}
+.events {
+    margin-top: 158px;
+    margin-bottom: 158px;
+}
+.event-item {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 42px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.event-item-1 {
+    position: relative;
+    width: 367px;
+    height: 600px;
+    background-image: url(../img/files/@1x/maraphon.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.event-item-1:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: o;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #FBF138 0%, rgba(253, 249, 182, 0) 100%);
+    opacity: 0.3;
+}
+.event-item-1:hover:before {
+    opacity: 0.6;
+}
+.event-item-2 {
+    position: relative;
+    width: 367px;
+    height: 600px;
+    background-image: url(../img/files/@1x/Vebinar\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.event-item-2:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: o;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #FBF138 0%, rgba(253, 249, 182, 0) 100%);
+    opacity: 0.3;
+}
+.event-item-2:hover:before {
+    opacity: 0.6;
+}
+.event-item-3 {
+    position: relative;
+    width: 367px;
+    height: 600px;
+    background-image: url(../img/files/@1x/Vebinar\ 2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.event-item-3:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: o;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #FBF138 0%, rgba(253, 249, 182, 0) 100%);
+    opacity: 0.3;
+}
+.event-item-3:hover:before {
+    opacity: 0.6;
+}
+.event-item .date {
+    margin-left: 33px;
+    margin-top: 30px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 150%;
+    color: #2B3541;
+    opacity: 0.6;
+}
+.event-item h3 {
+    margin-left: 33px;
+    margin-top: 22px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 125%;
+    color: #2B3541;
+}
+.event-item .label {
+    position: relative;
+    top: 376px;
+    left: 241px;
+    width: 126px;
+    height: 47px;
+    background: #FBF138;
+    font-size: 18px;
+    line-height: 44px;
+    text-align: center;
+    color: #2B3541;
+}
+.schedule .title {
+    display: flex;
+    justify-content: space-between;
+}
+.schedule .title p {
+    margin-top: 14px;
+    font-size: 28px;
+    font-weight: 700;
+}
+.box {
+    margin-top: 35px;
+    display: grid;
+    height: 700px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(12, 1fr);
+    grid-gap: 20px;
+}
+.box-item {
+    position: relative;
+    border: 1px solid rgba(43, 53, 65, 0.5);
+    padding: 20px 30px;
+}
+.item-1 {
+    grid-row: 1 / 5;
+}
+.item-1:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.item-2 {
+    grid-row: 1 / 8;
+}
+.item-2:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.item-3 {
+    grid-row: 1 / 7;
+}
+.item-3:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.item-4 {
+    grid-row: 5 / 13;
+    background: linear-gradient(180deg, #FBF138 0%, rgba(253, 249, 182, 0.45) 100%);
+    opacity: 0.7;
+    box-shadow: 0px 13px 30px rgba(186, 180, 69, 0.2);
+    border: none;
+}
+.item-4:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.item-5 {
+    grid-row: 8 / 13;
+}
+.item-5:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.item-6 {
+    grid-row: 7 / 13;
+}
+.item-6:hover {
+    background: #F3F3F3;
+    opacity: 0.5;
+    box-shadow: 0px 4px 30px rgba(43, 53, 65, 0.2);
+}
+.grid-item {
+    display: grid;
+}
+.box-time {
+    margin-top: 3px;
+    text-align: right;
+    line-height: 150%;
+    color: #010101;
+    opacity: 0.7;
+}
+.box-img {
+    position: absolute;
+    bottom: 75px;
+}
+.box-description {
+    position: absolute;
+    bottom: 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 125%;
+    color: #2B3541;
+}
+.box-text {
+    position: absolute;
+    line-height: 150%;
+    color: #2B3541;
+    bottom: 30px;
+}
+.item-4 .box-description {
+    bottom: 132px;
+}
+.item-4 .box-img {
+    bottom: 212px;
+}
+.mailing {
+    margin-top: 160px;
+    height: 348px;
+    background: #F3F3F3;
+}
+.mailing-box {
+    width: 620px;
+    margin: 0 auto;
+    padding-top: 90px;
+}
+.mail-h2 {
+    text-align: center;
+}
+.flex {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 44px;
+    margin-bottom: 13px;
+}
+.input {
+    width: 372px;
+    height: 65px;
+    border: none;
+}
+.mailing-box .btn-more {
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 225px;
+    height: 68px;
+}
+::placeholder {
+    padding-left: 10px;
+    font-size: 1.8rem;
+    line-height: 150%;
+    color: #2B3541;
+    opacity: 0.3;
+}
+.check-box {
+    display: flex;
+}
+.check-box p {
+    margin: 0;
+    padding-left: 10px;
+}
+.about {
+    width: 1143px;
+    margin: 0 auto;
+}
+.about-flex {
+    display: flex;
+    justify-content: space-between;
+    width: 1143px;
+    margin: 0 auto;
+    padding-top: 150px;
+}
+.about-flex img {
+    height: fit-content;
+}
+.about-flex p {
+    line-height: 150%;
+    color: #2B3541;
+    padding-top: 21px;
+    padding-bottom: 21px;
+}
+.about-flex a {
+    margin-bottom: 0;
+}
+.about-flex-item {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 70px;
+}
+.about-flex-item h3 {
+    font-size: 18px;
+    line-height: 125%;
+    color: #2B3541;
+}
+.about-flex-item p {
+    line-height: 150%;
+    color: #2B3541;
+    opacity: 0.6;
+}
+.about-item {
+    width: 204px;
+}
+.about-item:nth-child(2) {
+    width: 261px;
+}
+.about-item:nth-child(3) {
+    width: 251px;
+}
+.footer .wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    align-items: center;
+} 
+footer .header-menu {
+    justify-content: start;
+}
+footer .nav-header {
+    margin-left: 56px;
+    font-size: 14px;
+}
+footer .wrapper > a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    color: #2B3541;
+}
+.footer-bottom {
+    width: 1143px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    line-height: 150%;
+    color: #2B3541;
+    opacity: 0.3;
 }
